fix off center

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -16,9 +16,7 @@
   position: relative;
   background-color: white;
   border-radius: 15px;
-  margin-left: 15px;
   margin-right: 15px;
-  margin-top: 15px;
   width: 100%;
   height: 250px
 }
